--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "waste-warrior",
   "version": "1.0.0",
-  "main": "expo-router/entry",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,24 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.0",
-    "expo-router": "~3.5.0",
-    "expo-status-bar": "~1.12.0",
-    "expo-linear-gradient": "~13.0.0",
-    "expo-camera": "~15.0.0",
-    "expo-barcode-scanner": "~13.0.0",
+    "expo": "~50.0.14",
+    "expo-status-bar": "~1.11.1",
+    "expo-linear-gradient": "~12.7.2",
     "react": "18.2.0",
-    "react-native": "0.74.0",
-    "react-native-safe-area-context": "4.10.0",
-    "react-native-screens": "~3.31.0",
-    "@react-navigation/native": "^6.1.0",
-    "@react-navigation/bottom-tabs": "^6.5.0",
-    "react-native-gesture-handler": "~2.16.0",
-    "react-native-svg": "15.2.0",
-    "@expo/vector-icons": "^14.0.0"
+    "react-native": "0.73.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
