--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
-  "name": "waste-warrior",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "dependencies": {
-    "expo": "~49.0.0",
-    "expo-status-bar": "~1.6.0",
-    "expo-linear-gradient": "~12.3.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.74.5",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-status-bar": "~1.12.1"
   }
 }
